# utf8-unicode

./: .gitignore  README.md
utility/: CMakeLists.txt  logging.cmake  oracle.cmake
utility/dbportal/: .gitignore  CMakeLists.txt  cmake.sh
utility/dbportal/cmake/: dbportal.cmake
utility/dbportal/code/: addlist.h  binio.cpp  binio.h  build.py  cleanup.cpp  date.cpp  date.h  dir.h  dumpmain.cpp  fndir.cpp  fnext.cpp  fnmerge.cpp  fnsplit.cpp  genarchive.cpp  gencommn.cpp  gencommn.old  gencsadonet.cpp  gencsidl2.cpp  gencsnet7.cpp  gencsrw.cpp  gendap.cpp  genidl.cpp  genidl.h  genjportal.cpp  genoci.cpp  genoci.h  genoci.old  genopenapi.cpp  genparm.cpp  genproc.cpp  genproc.h  genpydbapi.cpp  genpython.cpp  genswagger.cpp  genvbcode3.cpp  genvbforador.cpp  genvbforidl.cpp  genvbnet7.cpp  getargs.cpp  getargs.h  (+40 more)
utility/dbportal/code/oci11/: dbportal.cpp  dbportal.h  ocinumber.cpp  ocinumber.h  portalextract.cpp  sqlapi.cpp  sqlapi.h
utility/dbportal/code/oci12/: dbportal.cpp  dbportal.h  ociapi.cpp  ociapi.h  ocimachine.h  ocinumber.cpp  ocinumber.h  portalextract.cpp  portalextract.h  prereqs_oci.h  sqlapi.cpp  sqlapi.h
utility/dbportal/examples/: CMakeLists.txt
utility/dbportal/examples/large/: CMakeLists.txt
utility/dbportal/examples/pocitest/: CMakeLists.txt  audittrail.si  ccy.si  comments.si  nednotes.si  queue.si  render.si  report.si  tidmca.si  zedzed.si
utility/dbportal/genproc/: CMakeLists.txt
utility/dbportal/installs/: CMakeLists.txt
utility/dbportal/pcexamples/: CMakeLists.txt
utility/dbportal/pcexamples/si/: compo.si  rewards.si
utility/dbportal/poci2j/: CMakeLists.txt
utility/dbportal/pocidump/: CMakeLists.txt
utility/dbportal/pocilib/: CMakeLists.txt
utility/dbportal/pocilink/: CMakeLists.txt
utility/dbportal/pocioci/: CMakeLists.txt
utility/dbportal/support/: Portal.cs
utility/dbportal/utility/: CMakeLists.txt  dbxsrc.cpp  filelist.txt  mod_date.c
utility/jtools/: .gitignore  CMakeLists.txt  makecrackle.cmd  makejars.cmd  makejportal.cmd  pom.xml
utility/jtools/accuity/: CMakeLists.txt  ListNew.cmake  ListOld.cmake  README.md  crackle.args  ibfiles.list  iifiles.list  inputs.list  jportal.args
utility/jtools/accuity/accuity_python/: accuity_python.pyproj  accuity_test.py  accuityhttp.ini
utility/jtools/accuity/dsi/: accuitycontact.si  accuitycorrespondent.si  accuitycorrespondentsub.si  accuityinstitutiontypes.si  accuitylocation.si  accuityofficer.si  accuityofficetype.si  accuityoverride.si  accuityroutingatt.si  accuityroutingcode.si  accuityroutingmultitype.si  accuityroutingtype.si  accuitysubcategory.si  audits.si  bankfile.si
utility/jtools/accuity/httpserver/: CMakeLists.txt  accuityhttp.cmd.in  accuityhttp.sh.in  accuityhttp.vcxproj.user.in  inifile.cmake
utility/jtools/accuity/idl2/: Accuity.properties  CMakeLists.txt  accuity.ib  accuity.ii  accuity.im
utility/jtools/accuity/idl2_build/: CMakeLists.txt  accuity.idl2  accuity.md
utility/jtools/accuity/idl2server/: CMakeLists.txt  accuityserver.cmd.in  accuityserver.sh.in  accuityserver.vcxproj.user.in  inifile.cmake
utility/jtools/accuity/jsi/: accuitycontact.si  accuitycorrespondent.si  accuitycorrespondentsub.si  accuitylocation.si  accuityofficer.si  accuityroutingatt.si  accuityroutingcode.si  accuityuseroverride.si  audits.si  bankfile.si
utility/jtools/accuity/py_zip/: CMakeLists.txt
utility/jtools/accuity/sql_build/: CMakeLists.txt  accuity.si
utility/jtools/accuity/src/: HTTPSERVER_UTIL.py  putty3shell.cpp  putty3shell.h
utility/jtools/accuity/swagger_build/: CMakeLists.txt  accuity.md.in
utility/jtools/accuity/test_requests/: test_requests.pyproj
utility/libs/: CMakeLists.txt
utility/libs/expat/: CMakeLists.txt
utility/libs/expat/aix/: makefile.aix
utility/libs/expat/src/: xmlparse.c  xmlparse.h
utility/libs/http/: CMakeLists.txt
utility/libs/http/src/: httprequest.h  httpserver.h  httpxcept.h
utility/libs/jsoncpp/: CMakeLists.txt
utility/libs/jsoncpp/src/: databuild2.h  databuilderjp.h  json_databuild.cpp  json_databuild.h  json_databuild2.cpp  json_databuildjp.cpp  lookup.inl  streams.inl
utility/libs/main/: CMakeLists.txt  CMakeLists.txt.bak
utility/libs/main/src/: addlist.h  amutex.h  appendlist.h  aqueue.h  ascii85.cpp  ascii85.h  athread.cpp  athread.h  autosemaphore.cpp  autosemaphore.h  basemacros.h  bdatetime.cpp  bdatetime.h  blackboard.h  bstring.cpp  bstring.h  cbsocket.cpp  cbsocket.h  cmdlinearg.cpp  cmdlinearg.h  collection.h  config.h  databuilder2.h  databuilderjp.h  filehandler.cpp  filehandler.h  getargs.cpp  getargs.h  handles.h  heapqueue.h  hugechar.h  kvstore.h  logfile.cpp  logfile.h  machine.h  md5.cpp  md5.h  mutex.h  (+27 more)
utility/libs/main/src.bak/: addlist.h  base64.cpp  basemacros.h  bstring.cpp  cbsocket.cpp  cbsocket.h  cmdlinearg.cpp  cmdlinearg.h  collection.h  config.cpp  config.h  csvbuilder.h  databuilder2.h  databuilderjp.h  getargs.cpp  getargs.h  handles.h  ini.cpp  ini.h  inistr.cpp  inistr.h  kvstore.cpp  logfile.h  md5.h  mutex.cpp  obsocket.cpp  obsocket.h  padgen.h  rdc.h  splits.cpp  sqlbin.cpp  sqlcons.h  sqlhnd.cpp  sqlhnd.h  swapbytes.h  tbuffer.h  tstring.cpp  tstring.h  xcept.cpp  xcept.h  (+11 more)
utility/libs/portal/: CMakeLists.txt
utility/libs/ti/: CMakeLists.txt
utility/libs/ubi/: CMakeLists.txt
utility/libs/utfpp/: CMakeLists.txt
utility/libs/zlib/: CMakeLists.txt
utility/pytools/: GENDS_UTILITY.py  ascii2ebcdic.py  bumbo.py  dbapi_annotate.py  dbapi_util.py  dict_to_utils.py  do_dos.py  get_depends.py  http_reduce.py  manifest.py  openapi_combine.py  walker.py  xmlutils.py
utility/pytools/xsd_py_gen/: CMakeLists.txt  runner.py  validate_test.py  wsdl_to_xsd.py  xml_to_xsd.py  xsd_consts.py  xsd_load_tester.py  xsd_py_gen.py
utility/tests/: CMakeLists.txt
utility/tests/db2_test/: CMakeLists.txt  main.cpp
utility/tests/oci_test/: CMakeLists.txt  main.cpp  main_blob.cpp
utility/tests/odbc_mysql_test/: CMakeLists.txt
utility/tests/odbc_oracle_test/: CMakeLists.txt  main.cpp  main_blob.cpp
utility/tests/odbc_postgre_test/: main.cpp  main_blob.cpp
(+893 files in other folders)
