project (libs-portal)

add_subdirectory (cli9)
add_subdirectory (lite3)
# missing mysql.h       - add_subdirectory (myapi)
# missing msodbcsql.h   - add_subdirectory (mss_17)
add_subdirectory (oci_12)
add_subdirectory (oci_18)
add_subdirectory (oci_19)
add_subdirectory (oci_21)
add_subdirectory (odbc_general)
# look at this later - add_subdirectory (pg8)

